Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I am a 38 year old male from Las Vegas, Nevada who is now living with his beautiful wife in Eugene, Oregon. In January of 2015 my Father took his own life. I helped with the bloody scene and these events have brought on PTSD. This is my story of how I rose from the ashes of this tragedy to live again. I want to prove there is hope after tragedy and that life can not only continue  but that you can thrive and even be stronger than you were before. If this blog helps or inspires even one person it will have been well worth the effort and I will have accomplished my goal. </p>
